--- a/2-pre-entrega/css/style.css
+++ b/2-pre-entrega/css/style.css
@@ -7,6 +7,7 @@
   text-align: center;
   margin: 30px 15px 15px 15px;
 }
+
 .header-title{
   text-align: center;
   margin: 30px 5px 5px 5px;
@@ -32,6 +33,9 @@
   color: #4D0592;
 }
 
+td {
+  vertical-align: baseline;
+}
 #inicio{
   margin-top: 10px;
 }
